added endpoints /caregiver and /episodes and /episodes_by_rang
