# api/impl_flask/openapi_server/dal/firebase.py
@@ -16,6 +16,12 @@ from openapi_server.models.web_user import WebUser
 from openapi_server.models.health_profile import HealthProfile
 from openapi_server.models.address import Address 
 from openapi_server.models.phone_number import PhoneNumber
+from openapi_server.models.caregiver import Caregiver
+from openapi_server.models.episode import Episode
+from openapi_server.models.organization_type import OrganizationType
+from openapi_server.models.hco import HCO
+from openapi_server.models.physician import Physician
+
 
 cred = credentials.Certificate('/Users/mana/Dropbox/UO_Shared_With_Mana/Prototype Stuff/myphr-api-firebase-adminsdk-qfh5m-73a706148a.json')
 default_app = firebase_admin.initialize_app(cred)
@@ -27,6 +33,8 @@ client_ref = db.collection('client')
 h_profile_ref = db.collection('health_profile')
 audit_ref = db.collection('audit_trail')
 contact_info_ref = db.collection('contact_info')
+episode_ref = db.collection('episodes')
+hic_ref = db.collection('hic')
 
 def get_user(username, password):
     #grabs the user matching this username and password from the database
@@ -210,4 +218,149 @@ def get_email_address(is_active, client_id= None, healthcare_provider_id= None):
     except:
         print('could not connect to database')
         raise
-            
+
+def get_care_givers(client_id,is_active):
+    try:
+        caregivers=[]
+        query_ref = client_ref.where('caregiver_of_client_id','==',client_id).where('is_active','==',is_active)
+        caregiver_list = list(query_ref.get())
+        if len(caregiver_list)>= 1:
+            for cg in caregiver_list:
+                cg_dict = cg.to_dict()
+                caregiver = Caregiver(
+                    client_id = cg_dict['client_id'],
+                    firstname = cg_dict['firstname'],
+                    surname = cg_dict['surname'],
+                    gender = cg_dict['gender'],
+                    dob = cg_dict['dob'],
+                    service_language = cg_dict['service_language'],
+                    profile_start_date = cg_dict['profile_start_date'],
+                    profile_end_date = cg_dict['profile_end_date'],
+                    relationship = cg_dict['relationship'],
+                    is_active = cg_dict['is_active'],
+                    is_primary_caregiver = cg_dict['is_primary_caregiver'],
+                    caregiver_of_client_id = cg_dict['caregiver_of_client_id']
+                )
+                caregivers.append(caregiver)
+            return caregivers
+        else:
+            print('no caregiver found')
+            return []
+    except Exception as e:
+        print(e)
+        raise
+
+def get_client_episodes(client_id, episode_type='All'):
+    try: 
+        episodes = {}
+        
+        if episode_type == 'All':
+           query_ref = episode_ref.where('client_id','==',client_id)
+        else:
+            query_ref = episode_ref.where('client_id','==',client_id).where('episode_type','==',episode_type)
+        
+        caregiver_list = list(query_ref.get())
+        if len(caregiver_list)>=1:
+            for e in caregiver_list:
+                e_dict = e.to_dict()
+                episode = Episode(
+                    episode_id = e_dict['episode_id'],
+                    client_id = e_dict['client_id'],
+                    healthcare_provider_id = e_dict['healthcare_provider_id'],
+                    start_date = e_dict['start_date'],
+                    end_date = e_dict['end_date'],
+                    is_active = e_dict['is_active'],
+                    episode_type = e_dict['episode_type'],
+                    physician_id = e_dict['physician_id']
+                )
+                
+                hicl = list(hic_ref.where('hic_id','==',episode.healthcare_provider_id).get())
+                if len(hicl)>=1:
+                    hicd = hicl[0].to_dict()
+                    hic = HCO(
+                        healthcare_provider_id = hicd['hic_id'],
+                        name = hicd['name'],
+                        start_date = hicd['start_date'],
+                        end_date = hicd['end_date'],
+                        bin = hicd['bin'],
+                        organization_type = hicd['organization_type']
+                    )
+
+                drl = list(hic_ref.where('hic_id','==',episode.physician_id).get())
+                drd = drl[0].to_dict()
+                dr = Physician(
+                    healthcare_provider_id=drd['hic_id'], 
+                    name=drd['name'], 
+                    start_date=drd['start_date'], 
+                    end_date=drd['end_date'], 
+                    firstname=drd['firstname'], 
+                    surname=drd['surname'], 
+                    specialty=drd['specialty'], 
+                    license_number=drd['license_number'], 
+                    license_date=drd['license_date']
+                )
+                episodes[episode.episode_id] = (episode,hic,dr)
+            return episodes
+        else: 
+            print('no episode found!')
+            return []
+    except Exception as e:
+        print( e)
+        raise
+
+def get_client_episodes_in_range(client_id,start_date,end_date, episode_type='All'):
+    try: 
+        episodes = []
+        
+        if episode_type == 'All':
+           query_ref = episode_ref.where('client_id','==',client_id).where('start_date','>=',start_date).where('end_date','<=',end_date)
+        else:
+            query_ref = episode_ref.where('client_id','==',client_id).where('episode_type','==',episode_type).where('start_date','>=',start_date).where('end_date','<=',end_date)
+        
+        caregiver_list = list(query_ref.get())
+        if len(caregiver_list)>=1:
+            for e in caregiver_list:
+                e_dict = e.to_dict()
+                episode = Episode(
+                    episode_id = e_dict['episode_id'],
+                    client_id = e_dict['client_id'],
+                    healthcare_provider_id = e_dict['healthcare_provider_id'],
+                    start_date = e_dict['start_date'],
+                    end_date = e_dict['end_date'],
+                    is_active= e_dict['is_active'],
+                    episode_type = e_dict['episode_type'],
+                    physician_id = e_dict['physician_id']
+                )
+                hicl = list(hic_ref.where('hic_id','==',episode.healthcare_provider_id).get())
+                if len(hicl)>=1:
+                    hicd = hicl[0].to_dict()
+                    hic = HCO(
+                        healthcare_provider_id = hicd['hic_id'],
+                        name = hicd['name'],
+                        start_date = hicd['start_date'],
+                        end_date = hicd['end_date'],
+                        bin = hicd['bin'],
+                        organization_type = hicd['organization_type']
+                    )
+
+                drl = list(hic_ref.where('hic_id','==',episode.physician_id).get())
+                drd = drl[0].to_dict()
+                dr = Physician(
+                    healthcare_provider_id=drd['hic_id'], 
+                    name=drd['name'], 
+                    start_date=drd['start_date'], 
+                    end_date=drd['end_date'], 
+                    firstname=drd['firstname'], 
+                    surname=drd['surname'], 
+                    specialty=drd['specialty'], 
+                    license_number=drd['license_number'], 
+                    license_date=drd['license_date']
+                )
+                episodes[episode.episode_id] = (episode,hic,dr)
+            return episodes
+        else: 
+            print('no episode found!')
+            return []
+    except:
+        print('could not conncet to database')
+        raise
